--- a/lab3/Report/report.tex
+++ b/lab3/Report/report.tex
@@ -12,7 +12,7 @@
 \renewcommand{\thesubsubsection}{\alph{subsubsection}}
 
 \title{Pattern Recognition Practical 3}
-\author{Maikel Withagen (s1867733) \and Steven Bosch (s1861948)}
+\author{Group 24: \and Maikel Withagen (s1867733) \and Steven Bosch (s1861948)}
 \date{\today}
 \lstset{frame=single, numbers=left,language=Matlab,basicstyle=\small, title=\lstname}
 \renewcommand{\thesection}{Assignment \arabic{section}}
@@ -27,8 +27,6 @@
 
 \section{K-nearest neighbor classification}
 \section{Parzen windows, posterior probabilities}
-\section{K-nearest neighbor classification}
-\subsection{}
 
 
 \end{document}
