--- a/lab3/Report/report.tex
+++ b/lab3/Report/report.tex
@@ -23,10 +23,13 @@
 
 \section{Classification error, hit/false alarm rates, ROC curve, discriminability}
 \subsection{}
+To compute the ROC-curves we used the code given in figure \ref{Ass1.1} in the appendix. The figure shows that the higher the difference between the means of the two distributions is (i.e. the further away the distributions are from each other), the higher the number of hits is per number of fals alarms. This means that classification will go better when distributions are farther away from each other, which is of intuitively comprehensable as well.
 
 
 \section{K-nearest neighbor classification}
 \section{Parzen windows, posterior probabilities}
 
+\section*{Appendix}
+\lstinputlisting{Assign1_1.m}[label={Ass1.1}]
 
 \end{document}
