--- a/lab3/Report/report.tex
+++ b/lab3/Report/report.tex
@@ -137,6 +137,10 @@ In normal circumstances however, the classifier data would be seperated into log
 
 \section{Parzen windows, posterior probabilities}
 \subsection{}
+We computed the following densities using the code given in the appendix:
+% \begin{array}
+% 
+% \end{array}
 
 
 \section*{Appendix}
@@ -144,5 +148,6 @@ In normal circumstances however, the classifier data would be seperated into log
 \lstinputlisting{../Code/assign1_2.m}
 \lstinputlisting{../Code/KNN.m}
 \lstinputlisting{../Code/assign2_3.m}
+\lstinputlisting{../Code/assign3_1.m}
 
 \end{document}
