--- a/lab3/Report/report.tex
+++ b/lab3/Report/report.tex
@@ -7,6 +7,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{amsmath}
+\usepackage{hyperref}
 
 %\renewcommand{\thesubsection}{\arabic{subsection}}
 \renewcommand{\thesubsubsection}{\alph{subsubsection}}
@@ -31,7 +32,7 @@ title=\lstname
 
 \section{Classification error, hit/false alarm rates, ROC curve, discriminability}
 \subsection{}
-Figure \ref{fig1.1} shows the ROC-curves we acquired using the code given in the listing for assignment 1.1 in the appendix. The figure shows that the higher the difference between the means of the two distributions is (i.e. the further away the distributions are from each other), the higher the number of hits is per number of fals alarms. This means that classification will go better when distributions are farther away from each other, which is of intuitively comprehensable as well.
+Figure \ref{fig1.1} shows the ROC-curves we acquired using the code given in the listing for assignment 1.1 in the appendix. The figure shows that the higher the difference between the means of the two distributions is (i.e. the further away the distributions are from each other), the higher the number of hits is per number of false alarms. This suggests that classification goes better when distributions are further away from each other.
 
 \begin{figure}[H]
  \centering
@@ -41,7 +42,7 @@ Figure \ref{fig1.1} shows the ROC-curves we acquired using the code given in the
 \end{figure}
 
 \subsection{}
-Figure \ref{fig1.2} shows the point $(fa, h)$ of the two given binary vectors plotted in the plot computed in assignment 1.1. The listing for assignment 1.2 in the appendix gives the code used to compute this point and to compute the ROC-curve with the associated discriminability value $d'$. Trial and error yielded a ROC-curve with $d' \approx 1.5$ (this is an approximation, the exact value is a decimal value that is time-consuming to find by trial and error). We computed this using $\sigma_{1,2} = 1$, which yields $\mu_2-\mu_1 = 1.5$ for the found discriminability value. Note that the code in the listing gives $\sigma = 2$, which means $\mu_2-\mu_1 = 3$, since $d' = \frac{\mu_2-\mu_1}{\sigma}$. So as long as the discriminability valueb between two distributions is the same, the sigma does not matter for classification. 
+\autoref{fig1.2} shows the point $(fa, h)$ of the two given binary vectors plotted in the figure from assignment 1.1. The listing for assignment 1.2 in the appendix gives the code used to compute this point and to compute the ROC-curve with the associated discriminability value $d'$. Trial and error yielded a ROC-curve with $d' \approx 1.5$ (this is an approximation, the exact value is a decimal value that is time-consuming to find by trial and error). We computed this using $\sigma_{1,2} = 1$, which yields $\mu_2-\mu_1 = 1.5$ for the found discriminability value. Note that the code in the listing gives $\sigma = 2$, which means $\mu_2-\mu_1 = 3$, since $d' = \frac{\mu_2-\mu_1}{\sigma}$.
 
 \begin{figure}[H]
  \centering
@@ -98,7 +99,7 @@ On the other hand when $k$ would become too high, data points are prone to be mi
 \end{figure}
 
 \subsection{}
-To do classification for four classes we changed the parameter of classes to 4 and added the new classes to the plots. This resulted in the classification grids shown in figure \ref{fig2.4_a}. Cross validation with four classes yields the error rates given in figure \ref{fig2.4b}. The figures show that again most of the points get classified correctly. This time we find an optimum at only a k of 5 (not of 3 as well, as was the case with two classes). The average error rate does seem to be higher than with two classes though. This seems logical, because with random data you would expect that with more classes there is a higher probability of a data point being classified into the wrong class. This is however, totally dependent on the data. If the actual data represent four well divided classes, the classification would of course go better when you would actually use four classes, because when you would just use two, the data might be distributed over the two classes in such a way that there is not such a clear separation boundary as with four classes. 
+To do classification for four classes we changed the parameter of number of classes to 4 and added the new classes to the plots. This resulted in the classification grids shown in figure \ref{fig2.4_a}. Cross validation with four classes yields the error rates given in figure \ref{fig2.4_b}. The figures show that again most of the points get classified correctly. This time we find an optimum at only a k of 5. The average error rate does seem to be higher than with two classes though. This seems logical, because with random data you would expect that with more classes there is a higher probability of a data point being classified into the wrong class. This is however, totally dependent on the data. If the actual data represent four well divided classes, the classification would of course go better when you would actually use four classes, because when you would just use two, the data might be distributed over the two classes in such a way that there is not such a clear separation boundary as with four classes. 
 
 In normal circumstances however, the classifier data would be seperated into logical groups instead of random groups like we do now. Then a difference in classifying performance would be logically explainable, because the data would actually represent groups already.
 
@@ -137,17 +138,94 @@ In normal circumstances however, the classifier data would be seperated into log
 
 \section{Parzen windows, posterior probabilities}
 \subsection{}
-We computed the following densities using the code given in the appendix:
-% \begin{array}
-% 
-% \end{array}
+\autoref{tab3.1} gives the densities computed using the code given in the appendix (note that both the file assign3.m and phi.m were used):
 
+\begin{table}[H]
+ \centering
+ \caption{The densities for the three points for every class ($h=1$}
+ \begin{tabular}{c|c|c|c}
+  Point & Class 1 & Class 2 & Class 3 \\
+  \hline
+  $x_1$ & $8.0e^{-3}$ & $3.0e^{-2}$ & $2.5e^{-2}$ \\
+  $x_2$ & $9.7e^{-3}$ & $3.1e^{-2}$ & $1.4e^{-3}$ \\
+  $x_3$ & $1.4e^{-4}$ & $6.8e^{-5}$ & $4.8e^{-6}$ \\
+ \end{tabular}
+ \label{tab3.1}
+\end{table}
+
+\subsection{}
+The priors are 10/30 for each category, so ${P_1, P_2, P_3} = 1/3$.
+
+\subsection{}
+We computed the following posterior probabilities for the three points of every class.
+\begin{table}[H]
+ \centering
+ \caption{The posterior probabilities for the three points for every class ($h=1$)}
+ \begin{tabular}{c|c|c|c}
+  Point & Class 1 & Class 2 & Class 3 \\
+  \hline
+  $x_1$ & $2.7e^{-3}$ & $1.0e^{-2}$ & $8.4e^{-3}$ \\
+  $x_2$ & $3.2e^{-3}$ & $1.0e^{-2}$ & $4.8e^{-3}$ \\
+  $x_3$ & $4.6e^{-5}$ & $2.3e^{-5}$ & $1.6e^{-6}$ \\
+ \end{tabular}
+ \label{tab3.2}
+\end{table}
+Using \autoref{tab3.2} we classified the points as follows (the highest posterior probability determines their class):
+\begin{itemize}
+ \item $x_1$: class 2
+ \item $x_2$: class 2
+ \item $x_3$: class 1
+\end{itemize}
+
+\subsection{}
+We computed the following densities using the code given in the appendix:
+\begin{table}[H]
+ \centering
+ \caption{The posterior probabilities for the three point for every class ($h=2$)}
+ \begin{tabular}{c|c|c|c}
+  Point & Class 1 & Class 2 & Class 3 \\
+  \hline
+  $x_1$ & $8.4e^{-4}$ & $2.0e^{-3}$ & $1.9e^{-3}$ \\
+  $x_2$ & $9.0e^{-4}$ & $2.1e^{-3}$ & $1.7e^{-3}$ \\
+  $x_3$ & $2.2e^{-4}$ & $3.7e^{-4}$ & $1.7e^{-4}$ \\
+ \end{tabular}
+ \label{tab3.3}
+\end{table}
+This yields the following classification:
+\begin{itemize}
+ \item $x_1$: class 2
+ \item $x_2$: class 2
+ \item $x_3$: class 2
+\end{itemize}
+
+\subsection{}
+Using our implementation for KNN from assignment 2 we get the following classes for the three points (using $k=1$):
+\begin{itemize}
+ \item $x_1$: class 3
+ \item $x_2$: class 1
+ \item $x_3$: class 1
+\end{itemize}
+
+
+
+\subsection{}
+Using $k=5$ our KNN-implementation yields the following classes:
+\begin{itemize}
+ \item $x_1$: class 3
+ \item $x_2$: class 2
+ \item $x_3$: class 1
+\end{itemize}
+
+The different results for the Parzen window approach and the KNN-approach yield quite different outcomes. Within both of the algorithms the results for the different parameter settings do overlap for 2 of the three points, but between the results of the algorithms we only see overlap of one point. 
+
+This is possible because the methods both define their respective `influence regions'. In the KNN-method the amount of nearest neighbors ($k$) defines the radius of the region in which neighbors have influence on the data point that needs to be classified. So the KNN `looks' in a circle (euclidean) or diamond (Manhattan) around the data point. On the other hand the Parzen window method uses squares around the to be classified points. This means that other points could fall into the Parzen region and influence the classification of a point than by using KNN, explaining why differences in classification can occur. You would expect that these differences would become more prevalent when $h$ and $k$ become larger, because the relative difference between the two areas becomes larger as well. We do not see this from our experiment though, but of course we only compared three data points classified on the basis of a small data set.
 
 \section*{Appendix}
 \lstinputlisting{../Code/assign1_1.m}
 \lstinputlisting{../Code/assign1_2.m}
 \lstinputlisting{../Code/KNN.m}
 \lstinputlisting{../Code/assign2_3.m}
-\lstinputlisting{../Code/assign3_1.m}
+\lstinputlisting{../Code/assign3.m}
+\lstinputlisting{../Code/phi.m}
 
 \end{document}
