--- a/lab3/Report/report.tex
+++ b/lab3/Report/report.tex
@@ -21,7 +21,8 @@ numbers=left,
 breaklines=true, 
 language=Matlab,
 basicstyle=\small, 
-title=\lstname
+title=\lstname,
+showstringspaces=false
 }
 
 \renewcommand{\thesection}{Assignment \arabic{section}}
@@ -157,16 +158,21 @@ In normal circumstances however, the classifier data would be seperated into log
 The priors are 10/30 for each category, so ${P_1, P_2, P_3} = 1/3$.
 
 \subsection{}
-We computed the following posterior probabilities for the three points of every class.
+We used the following function to compute the posterior probabilities:
+\begin{equation}
+ P_n(\omega_i|x) = \frac{p_n(x,\omega_i)P(\omega_i)}{\sum_{j=1}^cp_n(x,\omega_j)P(\omega_j)}
+\end{equation}
+
+Filling in this function resulted in the posterior probabilities given in \autoref{tab3.2}.
 \begin{table}[H]
  \centering
  \caption{The posterior probabilities for the three points for every class ($h=1$)}
  \begin{tabular}{c|c|c|c}
   Point & Class 1 & Class 2 & Class 3 \\
   \hline
-  $x_1$ & $2.7e^{-3}$ & $1.0e^{-2}$ & $8.4e^{-3}$ \\
-  $x_2$ & $3.2e^{-3}$ & $1.0e^{-2}$ & $4.8e^{-3}$ \\
-  $x_3$ & $4.6e^{-5}$ & $2.3e^{-5}$ & $1.6e^{-6}$ \\
+  $x_1$ & 0.13 & 0.47 & 0.40 \\
+  $x_2$ & $0.18$ & $0.56$ & $0.26$ \\
+  $x_3$ & $0.65$ & $0.32$ & $0.02$ \\
  \end{tabular}
  \label{tab3.2}
 \end{table}
@@ -185,9 +191,9 @@ We computed the following densities using the code given in the appendix:
  \begin{tabular}{c|c|c|c}
   Point & Class 1 & Class 2 & Class 3 \\
   \hline
-  $x_1$ & $8.4e^{-4}$ & $2.0e^{-3}$ & $1.9e^{-3}$ \\
-  $x_2$ & $9.0e^{-4}$ & $2.1e^{-3}$ & $1.7e^{-3}$ \\
-  $x_3$ & $2.2e^{-4}$ & $3.7e^{-4}$ & $1.7e^{-4}$ \\
+  $x_1$ & 0.18 & 0.42 & 0.40 \\
+  $x_2$ & 0.19 & 0.45 & 0.36 \\
+  $x_3$ & 0.29 & 0.49 & 0.22 \\
  \end{tabular}
  \label{tab3.3}
 \end{table}
