--- a/lab4/Report/report.tex
+++ b/lab4/Report/report.tex
@@ -41,11 +41,14 @@ Using the code given in the appendix we created the scatterplot in figure \ref{f
 The plot shows that there are at least three prototypes needed to approach a fairly well classification of these data. Two for set A, which should probably be located around $(3,4.5)$ and $(7.5, 5.5)$, and one for set B somewhere around $(5,5)$. 
 
 \subsection{}
+The code in the appendix shows our implementation of the LVQ1 algorithm. We acquired the following results for the different settings.
+
+\subsubsection{1 Prototype for class A and 1 prototype for class B}
 
 
 \section*{Appendix}
 \lstinputlisting{../Code/Ass1_1.m}
-%\lstinputlisting{../Code/}
+\lstinputlisting{../Code/Ass1_2.m}
 
 
 \maketitle
