--- a/lab5/Report/report.tex
+++ b/lab5/Report/report.tex
@@ -31,6 +31,60 @@ showstringspaces=false
 \maketitle
 
 \section{k-means clustering, quantization error, gap statistic}
+Using the code given in the Appendix(\autoref{kmeans}\autoref{runKMeans}), 
+we created the plots shown below.\\
+
+\begin{figure}[H]
+  \centering
+  \caption{Results for k=2}
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig1_k2.eps}
+    \caption{intermediate positions of the cluster means, 
+    with their progress indicated by the arrows.}
+  \end{subfigure}
+  \quad
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig2_k2.eps}
+    \caption{The final cluster means with their assigned data points)}
+  \end{subfigure}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{Results for k=4}
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig1_k4.eps}
+    \caption{intermediate positions of the cluster means, 
+    with their progress indicated by the arrows.}
+  \end{subfigure}
+  \quad
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig2_k4.eps}
+    \caption{The final cluster means with their assigned data points)}
+  \end{subfigure}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \caption{Results for k=8}
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig1_k8.eps}
+    \caption{intermediate positions of the cluster means, 
+    with their progress indicated by the arrows.}
+  \end{subfigure}
+  \quad
+  \begin{subfigure}[b]{.45\textwidth}
+    \includegraphics[width=\columnwidth]{Fig2_k8.eps}
+    \caption{The final cluster means with their assigned data points)}
+  \end{subfigure}
+\end{figure}
+
+
+
 
 \section{Batch Neural gas vs k-means}
+\section*{Appendix}
+\lstinputlisting{../Code/kmeans.m}{\label{kmeans}}
+\lstinputlisting{../Code/runKMeans.m}{\label{runKMeans}}
+
 \end{document}
