--- a/lab5/Report/report.tex
+++ b/lab5/Report/report.tex
@@ -85,14 +85,14 @@ we created the plots shown in figures \ref{fig1.1}, \ref{fig1.2} and \ref{fig1.3
   \label{fig1.3}
 \end{figure}
 
-\noindent We we can clearly see that the data form two clusters. Therefore figure \ref{fig1a} shows the quickest convergence to the final cluster centers. Usually it takes about two epochs for the cluster centers to converge, as is shown in the figure. Figure \ref{fig1b} shows that these centers form in the places which the human eye observes to be the correct centers. When we choose k as 4, as shown in figure \ref{fig1.2}, we can see that the two clusters get separated into two clusters each (although this is dependent on the initialization). The number of epochs is quite higher. This can be explained by the fact that the data are not naturally separated into four clusters but in two, so the distances between the data points within a main cluster are small. This causes the algorithm to take longer to find a convergence, since the cluster centers switch often during the clustering process. Finally figure \ref{fig1.3} shows the clustering for $k = 8$, which takes the longest amount of epochs to converge, because of the same reasoning. It separates both of the clusters into four subclusters. 
+\noindent We we can clearly see that the data form two clusters. Therefore figure \ref{fig1a} shows the quickest convergence to the final cluster centers. Usually it takes about two epochs for the cluster centers to converge, as is shown in the figure. Figure \ref{fig1b} shows that these centers form in the places which the human eye observes to be the correct centers. When we choose k as 4, as shown in figure \ref{fig1.2}, we can see that, dependent on the initialization, sometimes one main cluster gets divided into three subclusters and the other remains one cluster, and sometimes the two clusters get separated into two clusters each. The number of epochs it takes to reach convergence is high compared to a run using $k=2$. This can be explained by the fact that the data are not naturally separated into four clusters but in two, so the distances between the data points within a main cluster are small. This causes the algorithm to take longer to find a convergence, since the cluster centers switch often during the clustering process. Finally figure \ref{fig1.3} shows the clustering for $k = 8$, which takes the longest amount of epochs to converge, because of the same reasoning. It separates both of the clusters into four subclusters. 
 
 \subsection{}
 Using the code given in the appendix (kmeans.m and runKMeans.m) we computed the quantization errors and D-function given in figure \ref{fig2.1}.
 
 \begin{figure}[H]
   \centering
-  \caption{Results for $kmax = 20$}
+  \caption{Results for $kmax = 20$. The triangles give $k_{opt}$}
   \begin{subfigure}[b]{.45\textwidth}
     \includegraphics[width=\columnwidth]{Fig3.eps}
     \caption{The D-function.}
@@ -104,6 +104,12 @@ Using the code given in the appendix (kmeans.m and runKMeans.m) we computed the 
   \end{subfigure}
   \label{fig2.1}
 \end{figure}
+
+\noindent Figure \ref{fig2.1} shows the $D(k)$, $J(k)$ and $R(k)$ for a $kmax$ of 20. Here $k_{opt} = \argmax_k D(k)$ is the $k$ for which the difference between the error function and the reference function is the largest. Figure \ref{fig2.1} shows that $k_{opt}$ can be found at a $k$ of 2, which was expected because it could clearly be seen by a human that the data are divided into two main clusters. $D(k)$ decreases as $k$ increases, clusters that have no natural division need to be divided by even more clusters, which causes them to shift a lot before finally reaching convergence.
+
+\subsection{}
+\subsubsection{}
+
 
 \section{Batch Neural gas vs k-means}
 
