--- a/lab6/Report/report.tex
+++ b/lab6/Report/report.tex
@@ -81,6 +81,14 @@ Looking at figure \ref{fig1a} we can clearly distinguish four main clusters with
   \label{fig1.1}
 \end{figure}
 
+\section*{Assignment 2}
+\subsection{}
+See section \ref{Minkowski} in the appendix for our implementation.
+
+\subsection{}
+
+\section{title}
+
 \newpage
 \section*{Appendix}
 \appendix
