--- a/lab6/Report/report.tex
+++ b/lab6/Report/report.tex
@@ -87,6 +87,23 @@ See section \ref{Minkowski} in the appendix for our implementation.
 
 \subsection{}
 
+\section*{Assignment 1}
+\subsection{}
+\begin{figure}[b]
+	\includegraphics[width=\columnwidth]{Ass2_1.eps}
+	\caption{}
+	\label{fig2a}
+\end{figure}
+\subsection{}
+\begin{figure}[b]
+	\includegraphics[width=\columnwidth]{Ass2_2.eps}
+	\caption{}
+	\label{fig2b}
+\end{figure}
+
+\subsection{}
+
+\section*{Assignment 3}
 \section{title}
 
 \newpage
